# star

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DLLDef.hpp  LICENSE  LICENSE.txt  Makefile  My.cpp  My.hpp  Scanner.cpp  Scanner.hpp  Token.cpp  Token.hpp  TokenType.hpp  file.my  magic_enum.hpp  main.cpp  mylang.code-workspace  readme.md  star.code-workspace
Star/: CMakeLists.txt  StarCore.hpp
Star/cmake/: config.cmake.in
Star/src/: Debug.cpp  Debug.hpp  Expr.cpp  Expr.hpp  Scanner.cpp  Scanner.hpp  Star.cpp  Star.hpp  StarCore.hpp  Token.cpp  Token.hpp  TokenType.hpp  Visitor.hpp
StarCLI/: CMakeLists.txt  main.cpp
installers/: magic_enum.cmake.json  magic_enum.ps1  magic_enum.sh
launcher/: CMakeLists.txt
launcher/assets/: file.my
launcher/code/: main.cpp
launcher/src/: main.cpp
src/: CMakeLists.txt
src/cmake/: config.cmake.in
src/code/: DLLDef.hpp  Debug.cpp  Debug.hpp  Expr.cpp  Expr.hpp  Scanner.cpp  Token.cpp  Visitor.hpp
star/: CMakeLists.txt
star/src/: DLLDef.hpp  Debug.cpp  Debug.hpp  Expr.cpp  Expr.hpp  Parser.cpp  Parser.hpp  Scanner.cpp  Scanner.hpp  Star.cpp  Star.hpp  Token.cpp  Token.hpp  TokenType.hpp  Visitor.hpp
